--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,14 @@
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
     <string name="open">open</string>
 
+    <string-array name="roleList">
+        <item>Guru</item>
+        <item>Murid</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pilih_role">Pilih Role!</string>
 
 
 </resources>
