--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pilih_role">Pilih Role!</string>
+    <string name="no_handphone">No Handphone</string>
+    <string name="click_here">Click Here</string>
+    <string name="hello_user">Hello User</string>
 
 
 </resources>
